feat: Add audit logging for permission and rank management
- Add audit logging for adding/removing permissions from players
- Add audit logging for adding/removing permissions from ranks
- Add audit logging for modifying rank inheritance
- Store audit logs in SQLite database with actor, target, and action details
- Include server name in audit logs for cross-server tracking